<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/app_name"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtNumberPhone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_bg_edittext_login"
        android:ellipsize="end"
        android:hint="@string/number_phone"
        android:inputType="phone"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_bg_edittext_login"
        android:ellipsize="end"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNumberPhone"
        tools:ignore="LabelFor,TextFields" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_bg_button_blue"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

</android.support.constraint.ConstraintLayout>