<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LaunchActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.rd.PageIndicatorView
            android:id="@+id/pageDots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:piv_animationType="drop"
            app:piv_dynamicCount="true"
            app:piv_interactiveAnimation="true"
            app:piv_selectedColor="@color/colorBlue" />

        <TextView
            android:id="@+id/tvNonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="@dimen/padding"
            android:text="@string/non_login"
            android:textColor="@color/colorBlue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvNonLogin"
            android:layout_margin="@dimen/margin"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="1"
                android:background="@drawable/custom_bg_button_blue"
                android:onClick="registerClick"
                android:text="@string/register"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_bg_button_border_blue"
                android:onClick="loginClick"
                android:text="@string/login"
                android:textColor="@color/colorBlue"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
